fix twxt wrap in carousel

--- a/src/app/shared/corousel/corousel.component.scss
+++ b/src/app/shared/corousel/corousel.component.scss
@@ -49,7 +49,7 @@
 
 .carousel-item {
   padding: 20px;
-  text-wrap: pretty;
+  text-wrap: wrap;
   display: flex;
   flex-direction: column;
 }
